--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "daisyui": "^2.46.0",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.0",
+    "framer-motion": "^8.2.4",
     "next": "13.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-scroll-parallax": "^3.3.2",
     "typescript": "4.9.4"
   },
   "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
